send report function complete

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
-
+RESEND_API_KEY=re_7r8FpjnV_5o6Map9ptti8u9QqQQGkb53V
+RESEND_FROM_EMAIL=onboarding@resend.dev
 
 # (Optional) Restack Cloud - You only need to set these if you are using Restack Cloud
 
