--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "docker:stop": "docker stop restack-nextjs-together-llamaindex-frontend"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -28,8 +29,11 @@
     "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
+    "resend": "^4.0.1-alpha.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
