--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "docker:stop": "docker stop restack-nextjs-together-llamaindex-frontend"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
